--- a/Assignment3/style.css
+++ b/Assignment3/style.css
@@ -3,8 +3,9 @@
   padding: 0;
 }
 
-.top-nav {
+.topbar {
   background-color: #316dc3;
+
 }
 
 .social {
@@ -15,7 +16,7 @@
   padding: 0 !important;
 }
 
-.social>li>a {
+.social i {
   color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   list-style-type: none;
@@ -27,24 +28,26 @@
   transition: ease 0.3s;
 }
 
-.social li a:hover {
+.social i:hover {
   color: #ffffff;
   border: 0px solid #ffffff;
   opacity: 0.9;
 }
 
-.social:hover>li {
+.social i:hover {
   opacity: 0.9;
 }
 
-.social:hover>li:hover {
+.social:hover i>a:hover {
   opacity: 1;
 }
 
-.top-btn {
+.hello {
+
   font-size: 12px;
   color: green;
   border-radius: 0;
+
 }
 
 .header {
